fixed scrollbar color and width to be consistent accross browsers

--- a/client/src/components/AddLiftModal/AddLiftModal.scss
+++ b/client/src/components/AddLiftModal/AddLiftModal.scss
@@ -47,7 +47,7 @@
 
   &__scroll-container {
     max-height: 60vh;
-    overflow-y: scroll;
+    overflow-y: auto;
   }
 
   &__subtitle {
